# fastapi-responses

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
fastapi_responses/: __init__.py  graph.py  handler.py  openapi.py  utils.py
fastapi_responses/codemods/: call_graph.py
tests/: test_codemod.py  test_exception_with_obj.py  test_http_exception_handler.py  test_multiple_exceptions.py  test_multiple_exceptions_with_status.py  test_simple_app.py  test_single_exception.py  test_single_exception_with_status.py
