[tool.poetry]
name = "fastapi-responses"
version = "0.1.0"
description = "Extend OpenAPI schema to collect the HTTPExceptions."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
