[tool.poetry]
name = "fastapi-responses"
version = "0.2.1"
description = "Extend OpenAPI schema to collect HTTPExceptions."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kludex/fastapi-responses"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
fastapi = ">=0.62.0"
libcst = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
